Updates few spelling mistakes

--- a/Data Exploration using Python.ipynb
+++ b/Data Exploration using Python.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, I am experimenting with a real estate data set to understand data exploration usig various libraries.\n",
+    "In this notebook, I am experimenting with a house data set to understand data exploration using various libraries.\n",
     "\n",
     "I got this data from Kaggle (https://www.kaggle.com/pmarcelino/comprehensive-data-exploration-with-python/data). It has a llist of selling prices of houses based on variety of parameters. The objective is to predict sale price of a house based on a trained model.\n",
     "\n",
